<resources>
    <string name="app_name">Rxjava_Android_Learning</string>
    <!--scheduler_fragment-->
    <string name="btn_schedulers">后台耗时工作(线程调度)</string>
    <string name="scheduler_description">按钮点击进行后台耗时事件,线程切换控制主线程view</string>
    <string name="scheduler_btn">开始后台工作</string>
    <!--enventbuff_fragment-->
    <string name="eventbuff_btn">事件缓冲(buffer操作符)</string>
    <string name="eventbuff_description">缓冲一段时间内发送的事件,然后进行统一处理</string>
    <string name="evnet_btn">点击</string>
    <!--debounce_fragment-->
    <string name="debouce_description">对编辑框进行监听,对每次变化进行操作</string>
    <string name="debounce_btn">清除</string>
    <string name="debounce_button">编辑框变化事件监听</string>
    <string name="retrofit_description">展示了使用retrofit进行网络请求</string>
    <string name="retrofit_btn">展示所有贡献者</string>
    <string name="comname">square</string>
    <string name="libname">retrofit</string>
    <string name="retrofit_btn1">展示所有用户</string>
    <string name="retrofit_rxjava">网络请求(retrofit+Rxjava)</string>
    <string name="github_oauth_token"><!-- InsertYouroAuthTokenHere --></string>
    <string name="owner">owner</string>
    <string name="repo">repo</string>
    <string name="edit_change">监听两个编辑框变化</string>
    <string name="jiaohao">+</string>
    <string name="_0">0</string>
    <string name="doublebinder">多个编辑框事件监听</string>
    <string name="polling_description">定时任务实例</string>
    <string name="simple_polling">简单的定时任务</string>
    <string name="istart_increasingly_delayed_polling">延迟增加的定时任务</string>
    <string name="polling">定时任务</string>
    <string name="tap">Tap</string>
    <string name="rxbus_top">点击按钮发送事件信号到总线</string>
    <string name="rxbus_btn">事件总线</string>
    <string name="rxbus">事件总线监听</string>
    <string name="volley">调用volley网络请求</string>
    <string name="click">点击</string>
    <string name="volley_s">volley网络通信</string>
    <string name="url">https://api.github.com/users/sosky-yty</string>
    <string name="des_inputtest">监听多个输入框内容正确性,最终并激活按钮</string>
    <string name="email_address">请输入邮箱地址 :</string>
    <string name="_8_char"><![CDATA[请输入用户名(>8个char)]]></string>
    <string name="password_input"><![CDATA[请输入密码(>8,<20)]]></string>
    <string name="login_btn">登录</string>
    <string name="s_login">登录</string>
    <string name="inputtest_S">监听多个输入框事件</string>
    <string name="netword_s">检测手机是否联网</string>
    <string name="not_online">未联网</string>
    <string name="network_btns">检测网络情况</string>
</resources>
